# Chess

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  REDAME.md  bishop.cpp  bishop.hpp  board.cpp  board.hpp  build.bat  check.frag  chess.cpp  colorconverter.cpp  colorconverter.hpp  install.bat  king.cpp  king.hpp  knight.cpp  knight.hpp  parser.cpp  parser.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp  run.bat  soundmanager.cpp  soundmanager.hpp
Images/pieces/: LICENSE
